// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test of SearchResultList 1`] = `
<div
  className="list-group"
  onKeyDown={[Function]}
>
  <div
    className="list-group-item list-group-item-success"
    data-rr-ui-event-key={null}
    onClick={[Function]}
  />
</div>
`;

exports[`snapshot test of SearchResultList 2`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="list-group"
      onKeyDown={[Function]}
    >
      <div
        className="list-group-item list-group-item-info"
        data-rr-ui-event-key={null}
        onClick={[Function]}
      />
    </div>
  </div>
</div>
`;
